--- a/kadai1.html
+++ b/kadai1.html
@@ -7,7 +7,7 @@
     </head>
 <body>
     <h1>久留米工業大学</h1>
-    <h2><img src="mariogazou.png" alt="a">
+    <h2><img src="images/gazou.jpg" alt="a">
     <h2>概要</h2>
     <h3>建学の精神</h3>
     <h4>「人間味豊かな産業人の育成」を建学の精神としています。</h4>
