--- a/kadai3.html
+++ b/kadai3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>タイトル</title>
-        <link rel="stylesheet" type="text/css" href="css/enshu06.css">
+        <link rel="stylesheet" type="text/css" href="css/kadai3.css">
     </head>
     <boby>
     <h1>久留米工業大学</h1>
