--- a/enshu03_head.html
+++ b/enshu03_head.html
@@ -4,11 +4,11 @@
 
     <head>
     <meta charset="utf-8">
-        <titl>タイトル</titl>
+        <titl>トップページ（課題2）</titl>
     
     </head>
 <body>
-    <h1>h1見出し</h1>　 
+    <h1>情報ネットワーク工学科　梶原玄　のページへようこそ</h1>　 
    
    
     <p>
